sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:6: error: illegal start of simple pattern
      if (plusPetit(j+1,j)) {echange ( j , j +1 ); var = var + 1}
                                                       ^AlgBubbleSort3:6: error: '=' expected but '}' found.
      if (plusPetit(j+1,j)) {echange ( j , j +1 ); var = var + 1}
                                                                ^